# sfdc-quick-deployer

./: CMakeLists.txt  README.md  autoexec.lua  borrar  install.sh  run.sh  sfdc-quick-deployer-simple-print
client/: .clang-tidy  CMakeLists.txt  autoexec.lua  main.cpp  run.sh  sfdc_client.cpp  sfdc_client.h
client/orquestrator/: orquestrator.cpp  orquestrator.h
client/resource_reader/: resource_reader.cpp  resource_reader.h
client/resource_repo/: resource_repo.cpp  resource_repo.h
client/serdes/: resource_serdes.cpp
client/sfdc_client/: sfdc_client.cpp  sfdc_client.h
client/utils/: utils.cpp  utils.h
resources/: LT1_Ctrl.cls  LT3_Ctrl.cls  WS_signatureGetStatus.cls  class.cls  curl-prototype.tgz  myClassTEST.cls
src/: main.cpp
src/body_creator/: body_creator.cpp  body_creator.h
src/orquestrator/: orquestrator.cpp  orquestrator.h
src/req_res_utils/: req_res_utils.cpp  req_res_utils.h
src/resource_reader/: resource_reader.cpp  resource_reader.h
src/resource_repo/: resource_repo.cpp  resource_repo.h
src/serdes/: resource_serdes.cpp  resource_serdes.h
src/sfdc_client/: sfdc_client.cpp  sfdc_client.h
